crates/python_parser/tests/snapshots/invalid_syntax@statements__with__unclosed_ambiguous_lpar.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/statements/with/unclosed_ambiguous_lpar.py
---
## AST

```
Module(
    ModModule {
        range: 0..14,
        body: [
            With(
                WithStmt {
                    range: 0..14,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 5..6,
                            context_expr: Name(
                                NameExpr {
                                    range: 6..6,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            ExprStmt {
                                range: 9..14,
                                value: BinOp(
                                    BinOpExpr {
                                        range: 9..14,
                                        left: Name(
                                            NameExpr {
                                                range: 9..10,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            NameExpr {
                                                range: 13..14,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | with (:
  |       ^ Syntax Error: Expected an expression
2 | 
3 | x + y
  |


  |
1 | with (:
2 | 
3 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
